add new page to fcc project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<div>Udemy</div>
 			</section>
 			<section>
-				<div>FreeCodeCamp</div>
+				<div><a href=''>FreeCodeCamp</a></h1></div>
+
 			</section>
 			<section>
 				<div>Codewarz</div>
